--- a/.dockerignore
+++ b/.dockerignore
@@ -30,8 +30,8 @@
 /tmp/storage/*
 !/tmp/storage/.keep
 
-# Ignore assets.
-/node_modules/
-/app/assets/builds/*
-!/app/assets/builds/.keep
-/public/assets
+# # Ignore assets.
+# /node_modules/
+# /app/assets/builds/*
+# !/app/assets/builds/.keep
+# /public/assets
